[package]
name = "minting"
version = "0.1.0"
description = "Mint and send an NFT"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "minting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
mpl-token-metadata = { version="1.2.5", features = [ "no-entrypoint" ] }
anchor-spl = "0.24.2"